<resources>
    <string name="app_name">RandomApp</string>
    <string name="text_version">Version</string>
    <string name="version_value">1.0.18</string>
    <string name="app_randomGenerator">Random Generators</string>
    <string name="app_flip_coin">Flip Coin</string>
    <string name="app_dice">Dice</string>
    <string name="app_cardPicker">Card Picker</string>
    <string name="app_seriesGenerator">Series Generator</string>
    <string name="app_teamsGenerator">Teams Formation</string>
    <string name="app_yesNo">Yes - No</string>
    <string name="app_rps">Rock-Paper-Scissors</string>
    <string name="app_randomNumbers">Random Numbers</string>
    <string name="app_randomPasswords">Random Passwords</string>
    <string name="app_randomDatesTimes">Random Dates &amp; Times</string>
    <string name="app_randomColors">Random Colors</string>
    <string name="app_uuids">Unique Ids</string>
    <string name="menu_home">Home</string>
    <string name="menu_randomGenerator">Random Generators</string>
    <string name="menu_flipCoin">Flip coin</string>
    <string name="menu_dice">Dice</string>
    <string name="menu_cardPicker">Card picker</string>
    <string name="menu_seriesGenerator">Series Generator</string>
    <string name="menu_divideAndAssign">Teams Formation</string>
    <string name="menu_yesNo">Yes - No</string>
    <string name="menu_rockPaperScissors">Rock-Paper-Scissors</string>
    <string name="menu_savedLists">Saved lists</string>
    <string name="menu_randomNumbers">Random Numbers</string>
    <string name="menu_randomPasswords">Random Passwords</string>
    <string name="menu_randomDatesTimes">Random Dates &amp; Times</string>
    <string name="menu_randomColors">Random Colors</string>
    <string name="menu_uuids">Unique Ids</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_language">Select Language</string>
    <string name="text_theme">Theme</string>
    <string name="text_max_limited_to">Max limited to </string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hint_how_many">How many</string>
    <string name="cb_text_repeat">Repeat</string>
    <string name="hint_text_results">Results</string>
    <string name="but_text_generate">Generate</string>
    <string name="text_copy">Copy</string>
    <string name="text_share">Share</string>
    <string name="text_format">Format</string>
    <string name="text_results">Results</string>
    <string name="results_copied_success_msg">Results copied to Clipboard</string>
    <string name="value_empty_error_msg">Value can not be empty</string>
    <string name="value_greater_than_zero_error_msg">Value should be greater than zero</string>
    <string name="sort_order_not_selected_error_msg">Please select sort order</string>
    <string name="values_range_error_msg">Value should be within the range of %1$d and %2$d</string>
    <string name="max_is_more_than_min_error_msg">Max value should be more than min value</string>
    <string name="dialog_header_usage_notice">Usage notice</string>
    <string name="button_ok">Ok</string>
    <string name="valid_input_required_error">Valid %1$s required</string>
    <string name="add_list_error">Please add the list to generate the %1$s</string>
    <string name="text_selected_listItems">Selected list items: </string>
    <string name="text_Select_list">Select list:</string>
    <string name="text_New_list">New list</string>
    <string name="text_selected_list_items">Selected list items</string>
    <string name="list_empty_msg">List cannot be empty</string>
    <string name="text_result">Result</string>
    <string name="but_save">Save</string>
    <string name="but_cancel">Cancel</string>
    <string name="text_random_numbers">Random Numbers</string>
    <string name="text_random_strings">Random Passwords</string>
    <string name="text_random_dates_times">Random Dates &amp; Times</string>
    <string name="text_random_colors">Random Colors</string>
    <string name="text_UUIDs">UUIDs</string>
    <string name="hint_min_range">Range from</string>
    <string name="hint_max_range">Range to</string>
    <string name="cb_text_decimal">Decimal</string>
    <string name="text_precision">Precision:</string>
    <string name="cb_text_sort">Sort</string>
    <string name="rb_text_ascending">Ascending</string>
    <string name="rb_text_decending">Decending</string>
    <string name="selectPrecision">Select precision</string>
    <string name="max_generation_limit_error_msg">Only upto %1$d numbers can be generated</string>
    <string name="generation_range_exceeds_error_msg">Can not have more than %1$d unique random numbers</string>
    <string name="precision_1">1 (0.0)</string>
    <string name="precision_2">2 (0.00)</string>
    <string name="precision_3">3 (0.000)</string>
    <string name="precision_4">4 (0.0000)</string>
    <string name="precision_5">5 (0.00000)</string>
    <string name="precision_6">6 (0.000000)</string>
    <string name="precision_7">7 (0.0000000)</string>
    <string name="precision_8">8 (0.00000000)</string>
    <string name="precision_9">9 (0.000000000)</string>
    <string name="precision_10">10 (0.0000000000)</string>
    <string name="hint_min_length">Min length</string>
    <string name="hint_max_length">Max length</string>
    <string name="cb_text_caps_A_Z">Caps [A-Z]</string>
    <string name="cb_text_small_a_z">Small [a-z]</string>
    <string name="rb_text_digits_0_9">Digits [0-9]</string>
    <string name="cb_text_special_chars">Special Chars</string>
    <string name="text_include">Include:</string>
    <string name="hint_special_chars">Special Chars</string>
    <string name="hint_include_special_chars">Include special chars</string>
    <string name="no_char_type_selected_error_msg">At least one character type checkbox should be selected</string>
    <string name="string_len_range_error_msg">Value should be within 1-100</string>
    <string name="max_strings_generation_limit_error_msg">Only upto %1$d strings can be generated</string>
    <string name="min_special_char_required_error_msg">At least one special character required when special characters enabled</string>
    <string name="max__dateTime_is_more_than_min_msg">End %1$s should be greater than start %2$s</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="text_date_and_time">date &amp; time</string>
    <string name="text_date_time_combinations">date &amp; time combinations</string>
    <string name="text_dates">Dates</string>
    <string name="text_times">Times</string>
    <string name="dateTime_range_exceed_error_msg">Can not have more than %1$d unique %2$s</string>
    <string name="no_date_time_selected_error">Either date or time checkbox should be selected</string>
    <string name="max_generation_limit_error_msg_dateTime">Only upto %1$d dates or times can be generated</string>
    <string name="cb_text_date">Date</string>
    <string name="cb_text_time">Time</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>
    <string name="hint_start_time">Start time</string>
    <string name="hint_end_time">End time</string>
    <string name="individual_color_copy_msg">Tap on individual color code text to copy</string>
    <string name="no_colors_generated_error">No color generated to share</string>
    <string name="colors_range_exceed_error_msg">Can not have more than %1$d colors</string>
    <string name="color_code_copied_msg">Color code %1$s copied</string>
    <string name="text_color_code">Color code</string>
    <string name="max_generation_limit_error_msg_UUIDs">Only upto %1$d UUIDs can be generated</string>
    <string name="result_heads">Heads</string>
    <string name="result_tails">Tails</string>
    <string name="text_select_coin">Select coin:</string>
    <string name="text_flip_coin">Flip coin</string>
    <string name="text_indian_coin">Indian coin</string>
    <string name="text_american_coin">American coin</string>
    <string name="text_canadian_coin">Canadian coin</string>
    <string name="result_total_msg">Total: %1$d</string>
    <string name="text_dice_count">How many dice:</string>
    <string name="selectNumberofDices">Select number of Dices</string>
    <string name="text_roll_dice">Roll dice</string>
    <string name="number_of_dice_1">1</string>
    <string name="number_of_dice_2">2</string>
    <string name="number_of_dice_3">3</string>
    <string name="number_of_dice_4">4</string>
    <string name="number_of_dice_5">5</string>
    <string name="number_of_dice_6">6</string>
    <string name="number_of_dice_7">7</string>
    <string name="number_of_dice_8">8</string>
    <string name="number_of_dice_9">9</string>
    <string name="cards_over_msg">Cards deck is empty. Click OK to shuffle and reset the deck</string>
    <string name="cards_over_header">Cards over</string>
    <string name="cardname_spade">Spade</string>
    <string name="cardname_club">Club</string>
    <string name="cardname_diamond">Diamond</string>
    <string name="cardname_heart">Heart</string>
    <string name="cardname_joker">Joker</string>
    <string name="cardname_ace">Ace</string>
    <string name="cardname_jack">Jack</string>
    <string name="cardname_queen">Queen</string>
    <string name="cardname_king">King</string>
    <string name="exclude_generated_cards_msg">Exclude generated cards</string>
    <string name="text_select_deck">Select deck:</string>
    <string name="text_selected_card">Selected Card</string>
    <string name="text_generate_card">Generate Card</string>
    <string name="text_cards_52">52 Cards</string>
    <string name="text_cards_54">54 Cards(2J)</string>
    <string name="text_cards_56">56 Cards(4J)</string>
    <string name="text_series">series</string>
    <string name="series_size_morethan_list_items_error">Series size cannot be more than list items count</string>
    <string name="max_generation_limit_error_msg_series_generation">Only upto %1$d series can be generated</string>
    <string name="series_range_exceed_error_msg">Can not have more than %1$d series</string>
    <string name="text_how_many_series">How many series</string>
    <string name="text_items_per_series">Items per series</string>
    <string name="text_exclude_same_items_set">Exclude same items set</string>
    <string name="text_exclude_generated_items_for_subsequent_sets">Exclude generated items for subsequent sets</string>
    <string name="text_teams">teams</string>
    <string name="team_size_morethan_list_items_error">Team size can not be more than the selected list items count</string>
    <string name="number_0f_teams__morethan_list_items_error">Number of teams can not be more than the selected list items count</string>
    <string name="text_how_many_teams">How many teams</string>
    <string name="text_members_per_teams">Members per teams</string>
    <string name="result_yes">Yes</string>
    <string name="result_no">No</string>
    <string name="result_true">True</string>
    <string name="result_false">False</string>
    <string name="text_result_type">Result type:</string>
    <string name="text_yes_no">Yes-No</string>
    <string name="text_true_false">True-False</string>
    <string name="result_rock">Rock</string>
    <string name="result_paper">Paper</string>
    <string name="result_scissors">Scissors</string>
    <string name="result_lizard">lizard</string>
    <string name="result_spock">Spock</string>
    <string name="text_rps">R-P-S</string>
    <string name="text_rpsls">R-P-S-L-S</string>
    <string name="list_updated_success_msg">List updated successfully</string>
    <string name="list_updated_error_msg">Error occurred while updating the List</string>
    <string name="text_listHolder">List Info</string>
</resources>